--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1983,7 +1983,7 @@
           "output": "lib/settings/_visual-grid.css",
           "name": "_visual-grid.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -1991,8 +1991,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
           "type": "sass"
         }
       },
