--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1903,6 +1903,99 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "626a3248": {
+          "id": "626a3248",
+          "path": "js/jquery-3.2.1.min.js",
+          "output": "js/jquery-3.2.1.min-dist.js",
+          "name": "jquery-3.2.1.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "0bb46780": {
+          "id": "0bb46780",
+          "path": "js/navigation.js",
+          "output": "js/navigation-dist.js",
+          "name": "navigation.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "51ee61e0": {
+          "id": "51ee61e0",
+          "path": "js/parallax.js",
+          "output": "js/parallax-dist.js",
+          "name": "parallax.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5c161557": {
+          "id": "5c161557",
+          "path": "js/modernizr-2.8.3.min.js",
+          "output": "js/modernizr-2.8.3.min-dist.js",
+          "name": "modernizr-2.8.3.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c3159fe5": {
+          "id": "c3159fe5",
+          "path": "js/jquery.sticky.js",
+          "output": "js/jquery.sticky-dist.js",
+          "name": "jquery.sticky.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "fd7675f3": {
+          "id": "fd7675f3",
+          "path": "img/logo.png",
+          "output": "img/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 9343,
+          "type": "png",
+          "initialSize": 9343,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
