--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,26 +9,6 @@
       "name": "bourbonpug",
       "path": "",
       "files": {
-        "98574937": {
-          "id": "98574937",
-          "path": "scss/_tools.scss",
-          "output": "css/_tools.css",
-          "name": "_tools.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "7e70da7e"
-          ],
-          "type": "sass"
-        },
         "7f642a56": {
           "id": "7f642a56",
           "path": "lib/base/_base.scss",
@@ -1907,7 +1887,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "7e70da7e"
+            "7e70da7e",
+            "3ce8b224",
+            "3be0aa9c"
           ],
           "type": "sass"
         },
@@ -2017,11 +1999,11 @@
           "height": 0,
           "width": 0
         },
-        "bd198046": {
-          "id": "bd198046",
-          "path": "scss/_resets.scss",
-          "output": "css/_resets.css",
-          "name": "_resets.scss",
+        "4794de05": {
+          "id": "4794de05",
+          "path": "scss/_1-settings.scss",
+          "output": "css/_1-settings.css",
+          "name": "_1-settings.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -2037,11 +2019,11 @@
           ],
           "type": "sass"
         },
-        "959025ff": {
-          "id": "959025ff",
-          "path": "scss/_layout.scss",
-          "output": "css/_layout.css",
-          "name": "_layout.scss",
+        "0290a80b": {
+          "id": "0290a80b",
+          "path": "scss/_2-tools.scss",
+          "output": "css/_2-tools.css",
+          "name": "_2-tools.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -2057,11 +2039,11 @@
           ],
           "type": "sass"
         },
-        "712b5514": {
-          "id": "712b5514",
-          "path": "scss/_elements.scss",
-          "output": "css/_elements.css",
-          "name": "_elements.scss",
+        "01d3dc54": {
+          "id": "01d3dc54",
+          "path": "scss/_3-generic.scss",
+          "output": "css/_3-generic.css",
+          "name": "_3-generic.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -2077,11 +2059,11 @@
           ],
           "type": "sass"
         },
-        "31bf116f": {
-          "id": "31bf116f",
-          "path": "scss/_theme.scss",
-          "output": "css/_theme.css",
-          "name": "_theme.scss",
+        "4486b0d6": {
+          "id": "4486b0d6",
+          "path": "scss/_4-elements.scss",
+          "output": "css/_4-elements.css",
+          "name": "_4-elements.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -2097,11 +2079,51 @@
           ],
           "type": "sass"
         },
-        "461718bf": {
-          "id": "461718bf",
-          "path": "scss/_variables.scss",
-          "output": "css/_variables.css",
-          "name": "_variables.scss",
+        "76bc07db": {
+          "id": "76bc07db",
+          "path": "scss/_5-objects.scss",
+          "output": "css/_5-objects.css",
+          "name": "_5-objects.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "c1c3d950": {
+          "id": "c1c3d950",
+          "path": "scss/_6-components.scss",
+          "output": "css/_6-components.css",
+          "name": "_6-components.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "dee18b04": {
+          "id": "dee18b04",
+          "path": "scss/_7-trumps.scss",
+          "output": "css/_7-trumps.css",
+          "name": "_7-trumps.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
