--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2138,6 +2138,21 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "4f4fa8c6": {
+          "id": "4f4fa8c6",
+          "path": "CHANGELOG.md",
+          "output": "CHANGELOG.html",
+          "name": "CHANGELOG.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
         }
       },
       "deploymentHistory": {},
